--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddAssetDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddAssetDialog.xaml
@@ -40,12 +40,12 @@
         </Grid.ColumnDefinitions>
 
         <!-- Type -->
-        <Label Grid.Row="0" Grid.Column="0" Content="Type:" VerticalAlignment="Center" />
+        <Label Grid.Row="0" Grid.Column="0" Content="Type:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectionChanged="TypeComboBox_SelectionChanged" />
 
         <!-- Source -->
-        <Label Grid.Row="1" Grid.Column="0" Content="Source:" VerticalAlignment="Center" />
+        <Label Grid.Row="1" Grid.Column="0" Content="Source:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <ComboBox Grid.Row="1" Grid.Column="1" x:Name="SourceComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectionChanged="SourceComboBox_SelectionChanged">
             <ComboBoxItem Content="This Project" Tag="CurrentProject" />
@@ -54,7 +54,7 @@
         </ComboBox>
 
         <!-- Project (shown when Source is Project) -->
-        <Label Grid.Row="2" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" />
+        <Label Grid.Row="2" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <Grid Grid.Row="2" Grid.Column="1" x:Name="ProjectGrid" Margin="{StaticResource FormFieldMargin}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -65,7 +65,7 @@
         </Grid>
 
         <!-- Path (shown when Source is File) -->
-        <Label Grid.Row="3" Grid.Column="0" x:Name="PathLabel" Content="Path:" VerticalAlignment="Center" Visibility="Collapsed" />
+        <Label Grid.Row="3" Grid.Column="0" x:Name="PathLabel" Content="Path:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
         <Grid Grid.Row="3" Grid.Column="1" x:Name="PathGrid" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -76,11 +76,11 @@
         </Grid>
 
         <!-- VSIX Sub Path -->
-        <Label Grid.Row="4" Grid.Column="0" Content="VSIX SubPath:" VerticalAlignment="Center" />
+        <Label Grid.Row="4" Grid.Column="0" Content="VSIX SubPath:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <TextBox Grid.Row="4" Grid.Column="1" x:Name="VsixSubPathTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Addressable -->
-        <Label Grid.Row="5" Grid.Column="0" Content="Addressable:" VerticalAlignment="Center" />
+        <Label Grid.Row="5" Grid.Column="0" Content="Addressable:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <CheckBox Grid.Row="5" Grid.Column="1" x:Name="AddressableCheckBox" Margin="{StaticResource FormFieldMargin}" VerticalAlignment="Center" />
 
         <!-- Warning for SDK-style projects without VsixSdk when selecting template assets -->
