--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddDependencyDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddDependencyDialog.xaml
@@ -39,7 +39,7 @@
         </Grid.ColumnDefinitions>
 
         <!-- Source -->
-        <Label Grid.Row="0" Grid.Column="0" Content="Source:" VerticalAlignment="Center" />
+        <Label Grid.Row="0" Grid.Column="0" Content="Source:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <ComboBox Grid.Row="0" Grid.Column="1" x:Name="SourceComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectionChanged="SourceComboBox_SelectionChanged">
             <ComboBoxItem Content="Manual" Tag="Manual" />
@@ -49,7 +49,7 @@
         </ComboBox>
 
         <!-- Project (shown when Source is Project) -->
-        <Label Grid.Row="1" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" Visibility="Collapsed" />
+        <Label Grid.Row="1" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
         <Grid Grid.Row="1" Grid.Column="1" x:Name="ProjectGrid" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -59,20 +59,28 @@
             <Button Grid.Column="1" Content="..." Width="30" Margin="5,0,0,0" Click="BrowseProject_Click" />
         </Grid>
 
+        <!-- Installed Extension (shown when Source is Installed) -->
+        <Label Grid.Row="1" Grid.Column="0" x:Name="InstalledLabel" Content="Extension:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
+        <ComboBox Grid.Row="1" Grid.Column="1" x:Name="InstalledComboBox" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed"
+                  SelectionChanged="InstalledComboBox_SelectionChanged">
+            <ComboBoxItem Content="(Custom - enter details below)" Tag="" />
+            <!-- Additional items are loaded dynamically from VS Setup API -->
+        </ComboBox>
+
         <!-- ID -->
-        <Label Grid.Row="2" Grid.Column="0" Content="ID:" VerticalAlignment="Center" />
+        <Label Grid.Row="2" Grid.Column="0" Content="ID:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <TextBox Grid.Row="2" Grid.Column="1" x:Name="IdTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Display Name -->
-        <Label Grid.Row="3" Grid.Column="0" Content="Display Name:" VerticalAlignment="Center" />
+        <Label Grid.Row="3" Grid.Column="0" Content="Display Name:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <TextBox Grid.Row="3" Grid.Column="1" x:Name="DisplayNameTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Version -->
-        <Label Grid.Row="4" Grid.Column="0" Content="Version:" VerticalAlignment="Center" />
+        <Label Grid.Row="4" Grid.Column="0" Content="Version:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
         <TextBox Grid.Row="4" Grid.Column="1" x:Name="VersionTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Location (shown for File source) -->
-        <Label Grid.Row="5" Grid.Column="0" x:Name="LocationLabel" Content="Location:" VerticalAlignment="Top" Visibility="Collapsed" />
+        <Label Grid.Row="5" Grid.Column="0" x:Name="LocationLabel" Content="Location:" VerticalAlignment="Top" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
         <Grid Grid.Row="5" Grid.Column="1" x:Name="LocationGrid" Margin="{StaticResource FormFieldMargin}" VerticalAlignment="Top" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
