--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddInstallationTargetDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddInstallationTargetDialog.xaml
@@ -1,4 +1,4 @@
-<platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddContentDialog"
+<platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddInstallationTargetDialog"
                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,8 @@
                         xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
                         xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
                         mc:Ignorable="d"
-                        Title="Add Content"
-                        Width="450" Height="200"
+                        Title="Add Installation Target"
+                        Width="450" Height="250"
                         WindowStartupLocation="CenterOwner"
                         ResizeMode="NoResize"
                         ShowInTaskbar="False"
@@ -27,29 +27,38 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="80" />
+            <ColumnDefinition Width="120" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Type:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
-        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="{StaticResource FormFieldMargin}"
-                  SelectedItem="{Binding Type, Mode=TwoWay}" />
+        <!-- Edition -->
+        <Label Grid.Row="0" Grid.Column="0" Content="Edition:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="EditionComboBox" Margin="{StaticResource FormFieldMargin}">
+            <ComboBoxItem Content="Visual Studio Community" Tag="Microsoft.VisualStudio.Community" IsSelected="True" />
+            <ComboBoxItem Content="Visual Studio Professional" Tag="Microsoft.VisualStudio.Pro" />
+            <ComboBoxItem Content="Visual Studio Enterprise" Tag="Microsoft.VisualStudio.Enterprise" />
+            <ComboBoxItem Content="Visual Studio (Integrated Shell)" Tag="Microsoft.VisualStudio.IntegratedShell" />
+        </ComboBox>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="Path:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
-        <Grid Grid.Row="1" Grid.Column="1" Margin="{StaticResource FormFieldMargin}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" x:Name="PathTextBox" Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Button Grid.Column="1" Content="..." Width="30" Margin="5,0,0,0" Click="BrowsePath_Click" />
-        </Grid>
+        <!-- Version -->
+        <Label Grid.Row="1" Grid.Column="0" Content="Version Range:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="VersionTextBox" Margin="{StaticResource FormFieldMargin}" Text="[17.0,19.0)" />
 
-        <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
+        <!-- Architecture -->
+        <Label Grid.Row="2" Grid.Column="0" Content="Architecture:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <ComboBox Grid.Row="2" Grid.Column="1" x:Name="ArchitectureComboBox" Margin="{StaticResource FormFieldMargin}">
+            <ComboBoxItem Content="(All architectures)" Tag="" IsSelected="True" />
+            <ComboBoxItem Content="x64 (amd64)" Tag="amd64" />
+            <ComboBoxItem Content="ARM64" Tag="arm64" />
+        </ComboBox>
+
+        <!-- Buttons -->
+        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
                     Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="OK" Margin="{StaticResource ButtonSpacing}" IsDefault="True" Click="OkButton_Click" />
             <Button Content="Cancel" IsCancel="True" />
