--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddPrerequisiteDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddPrerequisiteDialog.xaml
@@ -1,4 +1,4 @@
-<platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddContentDialog"
+<platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddPrerequisiteDialog"
                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,8 @@
                         xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
                         xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
                         mc:Ignorable="d"
-                        Title="Add Content"
-                        Width="450" Height="200"
+                        Title="Add Prerequisite"
+                        Width="500" Height="280"
                         WindowStartupLocation="CenterOwner"
                         ResizeMode="NoResize"
                         ShowInTaskbar="False"
@@ -27,29 +27,38 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="80" />
+            <ColumnDefinition Width="120" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Type:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
-        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="{StaticResource FormFieldMargin}"
-                  SelectedItem="{Binding Type, Mode=TwoWay}" />
+        <!-- Common Prerequisites -->
+        <Label Grid.Row="0" Grid.Column="0" Content="Common:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="CommonComboBox" Margin="{StaticResource FormFieldMargin}"
+                  SelectionChanged="CommonComboBox_SelectionChanged">
+            <ComboBoxItem Content="(Custom - enter details below)" Tag="" IsSelected="True" />
+            <!-- Additional items are loaded dynamically from VS Setup API -->
+        </ComboBox>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="Path:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
-        <Grid Grid.Row="1" Grid.Column="1" Margin="{StaticResource FormFieldMargin}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" x:Name="PathTextBox" Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Button Grid.Column="1" Content="..." Width="30" Margin="5,0,0,0" Click="BrowsePath_Click" />
-        </Grid>
+        <!-- Component ID -->
+        <Label Grid.Row="1" Grid.Column="0" Content="Component ID:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="IdTextBox" Margin="{StaticResource FormFieldMargin}" />
 
-        <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
+        <!-- Display Name -->
+        <Label Grid.Row="2" Grid.Column="0" Content="Display Name:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="DisplayNameTextBox" Margin="{StaticResource FormFieldMargin}" />
+
+        <!-- Version -->
+        <Label Grid.Row="3" Grid.Column="0" Content="Version:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="3" Grid.Column="1" x:Name="VersionTextBox" Margin="{StaticResource FormFieldMargin}" Text="[17.0,)" />
+
+        <!-- Buttons -->
+        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
                     Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="OK" Margin="{StaticResource ButtonSpacing}" IsDefault="True" Click="OkButton_Click" />
             <Button Content="Cancel" IsCancel="True" />
